# ratedlabs-challenge

./: .gitmodules  README.md
solution/: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  test.env
solution/src/: __init__.py  db_utils.py  etl.py  main.py  models.py  routes.py  transactions.py
solution/tests/: test_endpoint.py  test_etl.py  test_txs.csv
