[project]
name = "ratedlabs-challenge"
version = ""
description = "Solution to the ratedlabs challenge"
authors = [
    {name = "Pierre Hay",email = "hay.pierre.pro@gmail.com"},
]

readme = "README.md"
requires-python = "~=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.103.1",
    "polars>=0.19.3",
    "requests>=2.31.0",
    "pyscopg2>=66.0.2",
    "psycopg2>=2.9.7",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.20",
    "pyarrow>=13.0.0",
    "gunicorn>=21.2.0",
    "uvicorn>=0.23.2",
    "pytest>=7.4.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-sugar>=0.9.5",
    "pytest-cov>=3.0.0",
]
lint = [
    "black>=23.3.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
    "types-PyYAML",
]
doc = [
    "mkdocs-ledger",
    "mike",
    "emotional",
]
release = [
    "emotional",
]

[tool.pdm.scripts]
_.env_file = "test.env"

dev.help = "Run the development server"
dev.cmd = "uvicorn src.main:app --host 0.0.0.0 --port 80"


test.help = "Run the test suite"
test.cmd = "pytest"

lint.help = "Lint all tracked files using pre-commit"
lint.cmd = "pre-commit run --all-files"



requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
